# AntifraudApp

./: .gitignore  README.md  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/scamdetectorapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: AntiFraudApi.kt  CloudflareApi.kt  MainActivity.kt
app/src/main/java/com/example/scamdetectorapp/: AntiFraudApi.kt  MainActivity.kt
app/src/main/java/com/example/scamdetectorapp/data/model/: AiCheckRequest.kt  AiCheckResult.kt  AntiFraudResponse.kt  FraudReport.kt  UrlCheckResult.kt
app/src/main/java/com/example/scamdetectorapp/data/remote/: AntiFraudApi.kt  RetrofitClient.kt
app/src/main/java/com/example/scamdetectorapp/data/repository/: AntiFraudRepository.kt  NewsRepository.kt
app/src/main/java/com/example/scamdetectorapp/domain/model/: DetectionMode.kt  ScanResult.kt
app/src/main/java/com/example/scamdetectorapp/presentation/components/: CustomBottomBar.kt
app/src/main/java/com/example/scamdetectorapp/ui/theme/: Color.kt  Theme.kt  (+1 more)
app/src/main/res/drawable/: ic_shield_check.xml  shield_icon_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: shield_icon.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/com/example/scamdetectorapp/: ExampleUnitTest.kt
data/: fraud_data.csv
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
